package keijumt.design_pattern.pattern.composite

interface GroupEntry {
    fun printName()
}